--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
   </head>
   <body>
-    <div class="profile-card">
-      <div class="card-header">
+    <div class="pc">
+      <div class="ch">
         <div class="pic">
           <img src="profilbilde.png" alt="">
         </div>
-        <div class="name">Tanmeet Singh</div>
-        <div class="desc">Oslomet Student & <br>
+        <div class="navn">Tanmeet Singh</div>
+        <div class="beskrivelse">Oslomet Student & <br>
           Social Media Influencer</div>
-        <div class="sm">
+        <div class="mk">
           <f href=" https://www.facebook.com/ " class="fa fa-facebook"> </f>
           <i href="#" class="fa fa-snapchat-ghost"></i>
           <a href="#" class="fa fa-instagram"></a>
@@ -28,19 +28,19 @@
         </div>
         <a href="lasalei.13@outlook.com" class="contact-btn">Kontakt meg</a>
       </div>
-      <div class="card-footer">
-        <div class="numbers">
-          <div class="item">
+      <div class="cf">
+        <div class="nummer">
+          <div class="kk">
             <span>1</span>
             Posts
           </div>
           <div class="border"> </div>
-          <div class="item">
+          <div class="kk">
             <span>477</span>
             Following
           </div>
           <div class="border"> </div>
-          <div class="item">
+          <div class="kk">
             <span>607</span>
             Followers
           </div>
