--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Creating external links</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <! link til app logoene--> 
 
 
     <link rel="stylesheet" href="stylecard.css">
@@ -14,7 +14,7 @@
   <body>
     <div class="pc">
       <div class="ch">
-        <div class="pic">
+        <div class="pic">.   <!bildet i bakgrun-->
           <img src="profilbilde.png" alt="">
         </div>
         <div class="navn">Tanmeet Singh</div>
