--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Creating external links</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <! link til app logoene--> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <link rel="stylesheet" href="stylecard.css">
@@ -14,19 +14,19 @@
   <body>
     <div class="pc">
       <div class="ch">
-        <div class="pic">.   <!bildet i bakgrun-->
+        <div class="pic">
           <img src="profilbilde.png" alt="">
         </div>
         <div class="navn">Tanmeet Singh</div>
         <div class="beskrivelse">Oslomet Student & <br>
           Social Media Influencer</div>
         <div class="mk">
-          <f href=" https://www.facebook.com/ " class="fa fa-facebook"> </f>
-          <i href="#" class="fa fa-snapchat-ghost"></i>
-          <a href="#" class="fa fa-instagram"></a>
-          <i href="#" class="fa fa-dribbble"></i>
+          <f href=" https://www.facebook.com/tanmeet.singh.927 " class="fa fa-facebook"> </f>
+          <i href="https://www.snapchat.com/add/tanmeet01singh" class="fa fa-snapchat-ghost"></i>
+          <a href="https://www.instagram.com/tanmeet2802/" class="fa fa-instagram"></a>
+          <i href="https://student.oslomet.no/en/ " class="fa fa-dribbble"></i>
         </div>
-        <a href="lasalei.13@outlook.com" class="contact-btn">Kontakt meg</a>
+        <a href="tanmeet@live.com" class="contact-btn">Kontakt meg</a>
       </div>
       <div class="cf">
         <div class="nummer">
