--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Creating external links</title>
+    <title>Tanmeet Singh</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -21,12 +21,12 @@
         <div class="beskrivelse">Oslomet Student & <br>
           Social Media Influencer</div>
         <div class="mk">
-          <f href=" https://www.facebook.com/tanmeet.singh.927 " class="fa fa-facebook"> </f>
-          <i href="https://www.snapchat.com/add/tanmeet01singh" class="fa fa-snapchat-ghost"></i>
+          <a href=" https://www.facebook.com/tanmeet.singh.927 " class="fa fa-facebook"> </a>
+          <a href="https://www.snapchat.com/add/tanmeet01singh" class="fa fa-snapchat-ghost"></a>
           <a href="https://www.instagram.com/tanmeet2802/" class="fa fa-instagram"></a>
-          <i href="https://student.oslomet.no/en/ " class="fa fa-dribbble"></i>
+          <a href="https://student.oslomet.no/en/ " class="fa fa-dribbble"></a>
         </div>
-        <a href="tanmeet@live.com" class="contact-btn">Kontakt meg</a>
+        <a href="tanmeet@live.com" class="kontakt-btn">Kontakt meg</a>
       </div>
       <div class="cf">
         <div class="nummer">
